# reverse-dictionary

./: .gitignore  README.md  create_index.py  pyproject.toml  query_index.py
